rename folders and init theme manager

--- a/qml.qrc
+++ b/qml.qrc
@@ -1,15 +1,15 @@
 <RCC>
     <qresource prefix="/">
         <file>qml/main.qml</file>
-        <file>qml/Pages/MainMenu.qml</file>
-        <file>qml/Pages/GameArea.qml</file>
-        <file>qml/Pages/Settings.qml</file>
-        <file>qml/Controls/MenuButton.qml</file>
-        <file>qml/Controls/Toolbar.qml</file>
-        <file>qml/Singletons/Common.qml</file>
-        <file>qml/Singletons/GameLogic.qml</file>
-        <file>qml/Singletons/ThemeManager.qml</file>
-        <file>qml/Themes/LightTheme.qml</file>
-        <file>qml/Themes/DarkTheme.qml</file>
+        <file>qml/pages/MainMenu.qml</file>
+        <file>qml/pages/GameArea.qml</file>
+        <file>qml/pages/Settings.qml</file>
+        <file>qml/controls/MenuButton.qml</file>
+        <file>qml/controls/Toolbar.qml</file>
+        <file>qml/singletons/Common.qml</file>
+        <file>qml/singletons/GameLogic.qml</file>
+        <file>qml/singletons/ThemeManager.qml</file>
+        <file>qml/themes/LightTheme.qml</file>
+        <file>qml/themes/DarkTheme.qml</file>
     </qresource>
 </RCC>
