--- a/qml.qrc
+++ b/qml.qrc
@@ -14,7 +14,6 @@
         <file>qml/controls/BasePage.qml</file>
         <file>qml/PageSelector.qml</file>
         <file>qml/controls/TitleLabel.qml</file>
-        <file>qml/controls/ToolButton.qml</file>
         <file>qml/controls/Label.qml</file>
         <file>resources/fonts/foo.otf</file>
         <file>resources/fonts/NotoSans-Bold.ttf</file>
@@ -104,5 +103,12 @@
         <file>resources/images/cats/Start_Cats/SVG/Start_Cat_Dark_Theme.svg</file>
         <file>resources/images/cats/Start_Cats/SVG/Start_Cat_Light_Theme.svg</file>
         <file>qml/pages/Pause.qml</file>
+        <file>qml/controls/BackToolButton.qml</file>
+        <file>qml/controls/PauseToolButton.qml</file>
+        <file>qml/controls/ScorePanel.qml</file>
+        <file>resources/icons/HOKOPMN_KOTNKOB.svg</file>
+        <file>resources/images/cats/Start_Cats/SVG/Cat_pause_Dark_Theme.svg</file>
+        <file>resources/images/cats/Start_Cats/SVG/Cat_pause_Light_Theme.svg</file>
+        <file>qml/controls/GameCell.qml</file>
     </qresource>
 </RCC>
