--- a/qml.qrc
+++ b/qml.qrc
@@ -110,5 +110,6 @@
         <file>resources/images/cats/Start_Cats/SVG/Cat_pause_Dark_Theme.svg</file>
         <file>resources/images/cats/Start_Cats/SVG/Cat_pause_Light_Theme.svg</file>
         <file>qml/controls/GameCell.qml</file>
+        <file>qml/controls/AdvancedTimer.qml</file>
     </qresource>
 </RCC>
