Updated resources for game cats Implemented cats images in game.

--- a/qml.qrc
+++ b/qml.qrc
@@ -34,70 +34,6 @@
         <file>resources/images/background/Korm2.svg</file>
         <file>resources/images/background/Korm3.svg</file>
         <file>resources/images/background/Sausage.svg</file>
-        <file>resources/images/cats/Game_Cats/Cloud/Cloud_step_1.svg</file>
-        <file>resources/images/cats/Game_Cats/Cloud/Cloud_step_2.svg</file>
-        <file>resources/images/cats/Game_Cats/Cloud/Cloud_step_3.svg</file>
-        <file>resources/images/cats/Game_Cats/Cloud/Main_cloud.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/1D/Cat_1D_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/1D/Cat_1D_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/1D/Cat_1D_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/1D/Cat_1D_preveiw.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/1D/Cat_1D_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/2D/Cat_2D_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/2D/Cat_2D_paw.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/2D/Cat_2D_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/2D/Cat_2D_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/3D/Cat_3D_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/3D/Cat_3D_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/3D/Cat_3D_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/3D/Cat_3D_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/3D/Cat_3D_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/4D/Cat_4D.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/4D/Cat_4D_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/5D/Cat_5D_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/5D/Cat_5D_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/5D/Cat_5D_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/5D/Cat_5D_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/6D/Cat_6D_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/6D/Cat_6D_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/6D/Cat_6D_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/6D/Cat_6D_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Dark_Theme/6D/Cat_6D_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/1L/Cat_1L_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/1L/Cat_1L_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/1L/Cat_1L_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/1L/Cat_1L_Preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/1L/Cat_1L_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/2L/Cat_2L_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/2L/Cat_2L_paw.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/2L/Cat_2L_Preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/2L/Cat_2L_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/3L/Cat_3L_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/3L/Cat_3L_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/3L/Cat_3L_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/3L/Cat_3L_Preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/3L/Cat_3L_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/4L/Cat_4L.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/4L/Cat_4L_Preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/5L/Cat_5L_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/5L/Cat_5L_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/5L/Cat_5L_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/5L/Cat_5L_Preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/6L/Cat_6L_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/6L/Cat_6L_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/6L/Cat_6L_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/6L/Cat_6L_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Light_Theme/6L/Cat_6L_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_tail.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_body.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_paw_left.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_paw_right.svg</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_preview.png</file>
-        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_tail.svg</file>
         <file>resources/images/cats/Start_Cats/PNG/Start_Cat_Dark_Theme.png</file>
         <file>resources/images/cats/Start_Cats/PNG/Start_Cat_Light_Theme.png</file>
         <file>resources/images/cats/Start_Cats/SVG/Start_Cat_Dark_Theme.svg</file>
@@ -113,5 +49,72 @@
         <file>qml/controls/AdvancedTimer.qml</file>
         <file>qml/pages/Score.qml</file>
         <file>qml/pages/Rules.qml</file>
+        <file>qml/controls/CheckThemeButton.qml</file>
+        <file>qml/controls/CatImage.qml</file>
+        <file>main.cpp</file>
+        <file>resources/images/cats/Game_Cats/Cloud/cloud1.svg</file>
+        <file>resources/images/cats/Game_Cats/Cloud/cloud2.svg</file>
+        <file>resources/images/cats/Game_Cats/Cloud/cloud3.svg</file>
+        <file>resources/images/cats/Game_Cats/Cloud/cloud4.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/1Cat/Cat_1Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/1Cat/Cat_1Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/1Cat/Cat_1Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/1Cat/Cat_1Cat_preveiw.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/1Cat/Cat_1Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/2Cat/Cat_2Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/2Cat/Cat_2Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/2Cat/Cat_2Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/3Cat/Cat_3Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/3Cat/Cat_3Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/3Cat/Cat_3Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/3Cat/Cat_3Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/3Cat/Cat_3Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/4Cat/Cat_4Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/5Cat/Cat_5Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/5Cat/Cat_5Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/5Cat/Cat_5Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/5Cat/Cat_5Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/6Cat/Cat_6Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/6Cat/Cat_6Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/6Cat/Cat_6Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/6Cat/Cat_6Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/6Cat/Cat_6Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/1Cat/Cat_1Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/1Cat/Cat_1Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/1Cat/Cat_1Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/1Cat/Cat_1Cat_preview.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/1Cat/Cat_1Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/2Cat/Cat_2Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/2Cat/Cat_2Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/2Cat/Cat_2Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/3Cat/Cat_3Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/3Cat/Cat_3Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/3Cat/Cat_3Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/3Cat/Cat_3Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/3Cat/Cat_3Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/4Cat/Cat_4Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/5Cat/Cat_5Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/5Cat/Cat_5Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/5Cat/Cat_5Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/5Cat/Cat_5Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/6Cat/Cat_6Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/6Cat/Cat_6Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/6Cat/Cat_6Cat_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/6Cat/Cat_6Cat_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/6Cat/Cat_6Cat_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger1/T1_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_paw_right.svg</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_preview.png</file>
+        <file>resources/images/cats/Game_Cats/Tigers/Tiger2/T2_tail.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/2Cat/Cat_2Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Dark_Theme/4Cat/Cat_4Cat_body.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/2Cat/Cat_2Cat_paw_left.svg</file>
+        <file>resources/images/cats/Game_Cats/Light_Theme/4Cat/Cat_4Cat_body.svg</file>
     </qresource>
 </RCC>
