--- a/android/res/drawable/splash.xml
+++ b/android/res/drawable/splash.xml
@@ -6,7 +6,7 @@
         </shape>
     </item>
     <item>
-         <bitmap android:src="@drawable/icon"
+         <bitmap android:src="@drawable/test"
         android:gravity="center" />
     </item>
 </layer-list>
