--- a/qml.qrc
+++ b/qml.qrc
@@ -109,35 +109,31 @@
         <file>qml/helpers/Constants.js</file>
         <file>resources/icons/Dark_Theme/cat_score.svg</file>
         <file>resources/icons/Dark_Theme/paw.svg</file>
-        <file>resources/icons/Dark_Theme/settings.svg</file>
-        <file>resources/icons/Dark_Theme/volume_max.svg</file>
-        <file>resources/icons/Dark_Theme/volume_min.svg</file>
         <file>resources/icons/Light_Theme/cat_score.svg</file>
         <file>resources/icons/Light_Theme/paw.svg</file>
-        <file>resources/icons/Light_Theme/settings.svg</file>
-        <file>resources/icons/Light_Theme/volume_max.svg</file>
-        <file>resources/icons/Light_Theme/volume_min.svg</file>
+        <file>resources/icons/volume_max.svg</file>
+        <file>resources/icons/volume_min.svg</file>
         <file>qml/controls/BaseToolButton.qml</file>
         <file>resources/icons/flash.svg</file>
         <file>resources/icons/like.svg</file>
+        <file>resources/icons/settings.svg</file>
         <file>resources/icons/While_loading.svg</file>
         <file>qml/controls/VolumeSlider.qml</file>
         <file>qml/controls/CheckBox.qml</file>
-        <file>resources/icons/Dark_Theme/arrow.svg</file>
-        <file>resources/icons/Dark_Theme/arrowAction.svg</file>
-        <file>resources/icons/Dark_Theme/pause.svg</file>
-        <file>resources/icons/Dark_Theme/pauseAction.svg</file>
-        <file>resources/icons/Dark_Theme/play.svg</file>
-        <file>resources/icons/Dark_Theme/playAction.svg</file>
-        <file>resources/icons/Light_Theme/arrow.svg</file>
-        <file>resources/icons/Light_Theme/arrowAction.svg</file>
-        <file>resources/icons/Light_Theme/pause.svg</file>
-        <file>resources/icons/Light_Theme/pauseAction.svg</file>
-        <file>resources/icons/Light_Theme/play.svg</file>
-        <file>resources/icons/Light_Theme/playAction.svg</file>
         <file>resources/icons/jaws.svg</file>
+        <file>resources/icons/arrow.svg</file>
+        <file>resources/icons/play.svg</file>
+        <file>resources/icons/pause.svg</file>
         <file>resources/icons/paw.svg</file>
+        <file>resources/icons/restart.svg</file>
         <file>resources/icons/mask.svg</file>
+        <file>resources/icons/line.svg</file>
+        <file>resources/icons/on.svg</file>
+        <file>resources/icons/off.svg</file>
+        <file>resources/icons/eng.svg</file>
+        <file>resources/icons/ru.svg</file>
+        <file>resources/icons/sun.svg</file>
+        <file>resources/icons/moon.svg</file>
         <file>qml/singletons/SoundsManager.qml</file>
         <file>resources/sounds/buttons.ogg</file>
         <file>resources/sounds/feedcat.ogg</file>
@@ -146,5 +142,6 @@
         <file>resources/sounds/main1.mp3</file>
         <file>resources/sounds/purring.ogg</file>
         <file>QmlLanguage_ru.qm</file>
+        <file>qml/controls/Switch.qml</file>
     </qresource>
 </RCC>
