--- a/qml.qrc
+++ b/qml.qrc
@@ -138,7 +138,8 @@
         <file>resources/sounds/feedcat.ogg</file>
         <file>resources/sounds/feedtiger.ogg</file>
         <file>resources/sounds/gemover3.mp3</file>
-        <file>resources/sounds/main1.mp3</file>
+        <file>resources/sounds/main1.ogg</file>
+        <file>resources/sounds/main1loop.ogg</file>
         <file>resources/sounds/purring.ogg</file>
         <file>QmlLanguage_ru.qm</file>
         <file>qml/controls/Switch.qml</file>
